--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,7 @@
 }
 
 #Entry-form {
-  height: 50vmin;
-  width: 80vmin;
+  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,26 +16,37 @@
 
 
 #Entry-form div{
-  
+
 display: flex;
 flex-direction: row;
+justify-content: flex-start;
 align-items: center;
-justify-content: center;
-margin-top: 2.5vmin;
+
+
+}
+#Entry-form div span {
+  flex-grow: inherit;
+  flex-shrink: initial;
+
+  width: 10vw;
+  margin-left: 0px;
+  margin: 10px;
+  font-size: x-large;
+  text-align: left;
+  
+  
 
 }
 
 #Entry-form div input {
-  
-  height: 5vmin;
+  flex-grow: inherit;
+  flex-shrink: initial;
+  height: 8vmin;
   width: 30vw;
   margin: 20px;
   border: 2px solid white;
   border-radius: 5px 5px;
-  
   font-size: large;
-  
-
 }
 
 #Entry-form #Submit-button {
